# squad

./: .gitignore  README.md  diff.txt  main.py  pyproject.toml
agents/: base.py  manager.py  searcher.py  solver.py
llm/: ollama.py  openai.py
squad/: __main__.py
squad/interfaces/: cli.py
