[tool.poetry]
name = "crewai"
version = "0.1.0"
description = ""
authors = ["Daniel Luca <lucadanielcostin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.11"
langchain-community = "^0.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
