[tool.poetry]
name = "squad"
version = "0.1.0"
description = ""
authors = ["Daniel Luca <lucadanielcostin@gmail.com>"]
readme = "README.md"
packages = [{include = "squad"}]

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
langchain-openai = "^0.1.20"
python-dotenv = "^1.0.1"
langchain-ollama = "^0.1.1"
duckduckgo-search = "^6.2.6"
crewai = "^0.41.1"
crewai-tools = "^0.4.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
